tests/baselines/reference/excessPropertyCheckWithSpread.errors.txt
tests/cases/compiler/excessPropertyCheckWithSpread.ts(1,25): error TS2842: Variable 'number' is not used. Did you mean to write a type annotation for whole object?


==== tests/cases/compiler/excessPropertyCheckWithSpread.ts (1 errors) ====
    declare function f({ a: number }): void
                            ~~~~~~
!!! error TS2842: Variable 'number' is not used. Did you mean to write a type annotation for whole object?
    interface I {
        readonly n: number;
    }
    declare let i: I;
    f({ a: 1, ...i });
    
    interface R {
        opt?: number
    }
    interface L {
        opt: string
    }
    declare let l: L;
    declare let r: R;
    f({ a: 1, ...l, ...r });
    